[gd_scene load_steps=45 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://weapons/raw_assets/machete.glb" type="PackedScene" id=5]
[ext_resource path="res://weapons/raw_assets/machinegun.glb" type="PackedScene" id=6]
[ext_resource path="res://weapons/raw_assets/shotgun.glb" type="PackedScene" id=7]
[ext_resource path="res://weapons/raw_assets/rocketlauncher.glb" type="PackedScene" id=8]
[ext_resource path="res://weapons/HitScanBulletEmitter.tscn" type="PackedScene" id=9]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=10]
[ext_resource path="res://effects/MuzzleFlash.gd" type="Script" id=11]
[ext_resource path="res://effects/raw_assets/muzzleflash1.glb" type="PackedScene" id=12]
[ext_resource path="res://effects/raw_assets/muzzleflash3.glb" type="PackedScene" id=13]
[ext_resource path="res://weapons/DamageArea.tscn" type="PackedScene" id=14]
[ext_resource path="res://weapons/RocketSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://effects/raw_assets/muzzleflash2.glb" type="PackedScene" id=16]
[ext_resource path="res://weapons/crosshairs/crosshair065.png" type="Texture" id=17]
[ext_resource path="res://weapons/crosshairs/crosshair066.png" type="Texture" id=18]
[ext_resource path="res://weapons/crosshairs/crosshair001.png" type="Texture" id=19]
[ext_resource path="res://weapons/crosshairs/crosshair026.png" type="Texture" id=20]
[ext_resource path="res://characters/player/PickupManager.gd" type="Script" id=21]
[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=22]
[ext_resource path="res://ui/crypt_domino_1b.png" type="Texture" id=23]
[ext_resource path="res://characters/player/StatsDisplay.gd" type="Script" id=24]
[ext_resource path="res://ui/KLEINTEN.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://characters/player/PickupInfo.gd" type="Script" id=26]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.0223615, -0.0678529 ), Vector3( 0.0107346, 0.0558048, 0.0326105 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 12.7196, -1.83446, -8.27648 ), Vector3( -75.5392, 91.6505, -93.5219 ), Vector3( -60.6162, 179.095, -173.647 ), Vector3( -65.3987, 85.1477, -83.4015 ), Vector3( -39.233, 32.5454, -35.7915 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.0689657 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.154344 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -0.0879539, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 21.355, 0, 0 ), Vector3( 87.895, 0, 0 ), Vector3( 87.895, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.0361248 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "moving"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapons:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.03, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=12]
radius = 13.0

[sub_resource type="SphereShape" id=13]
radius = 50.0

[sub_resource type="CapsuleShape" id=14]
radius = 0.67

[sub_resource type="Animation" id=15]
resource_name = "heal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0, 0.14902 ), Color( 0, 1, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.14902 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=18]
size = 24
font_data = ExtResource( 25 )

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 6
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
current = true

[node name="WeaponManager" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.96046e-08, -0.15642, -0.31398 )
script = ExtResource( 4 )

[node name="Weapons" type="Spatial" parent="Camera/WeaponManager"]

[node name="Machete" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.173936, -0.0278969, 0.0647341 )
visible = false
script = ExtResource( 10 )
damage = 15
ammo = -1
attack_rate = 0.4

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]

[node name="machete" parent="Camera/WeaponManager/Weapons/Machete/Graphics" instance=ExtResource( 5 )]
transform = Transform( 0.182366, 0, 0, 0, 0.182366, 0, 0, 0, 0.182366, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Machete"]
autoplay = "idle"
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Machete"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.128213, 0, -0.441101 )

[node name="DamageArea" parent="Camera/WeaponManager/Weapons/Machete/BulletEmitters" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.190304, 0.0280994 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Machete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MachineGun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.135936, 0.0357596, 0.111642 )
script = ExtResource( 10 )
automatic = true
damage = 100
attack_rate = 0.1

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0689657 )

[node name="machinegun" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics" instance=ExtResource( 6 )]
transform = Transform( 0.149456, 0, 0, 0, 0.149456, 0, 0, 0, 0.149456, 0, 0, 0 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.051043, -0.256063 )
script = ExtResource( 11 )

[node name="muzzleflash1" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" instance=ExtResource( 12 )]
transform = Transform( -0.238451, 0, -3.60051e-08, 0, 0.238451, 0, 3.60051e-08, 0, -0.238451, 0, 0, 0 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00900432 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/MachineGun"]
autoplay = "idle"
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/MachineGun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0485455, -0.26182 )

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/MachineGun/BulletEmitters" instance=ExtResource( 9 )]

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/MachineGun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shotgun" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130691, 0.0411246, 0.139673 )
visible = false
script = ExtResource( 10 )
attack_rate = 0.8

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]

[node name="shotgun" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics" instance=ExtResource( 7 )]
transform = Transform( 0.137906, 0, 0, 0, 0.137906, 0, 0, 0, 0.137906, 0, -0.000802144, 0.0218236 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0204415, -0.241044 )
script = ExtResource( 11 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash"]

[node name="muzzleflash3" parent="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" instance=ExtResource( 13 )]
transform = Transform( -0.13922, 0, -4.53637e-08, 0, 0.13922, 0, 4.53637e-08, 0, -0.13922, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/Shotgun"]
autoplay = "idle"
anims/attack = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/Shotgun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.019293, -0.246466 )

[node name="HitScanBulletEmitter" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]

[node name="HitScanBulletEmitter2" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.999048, 0, -0.0436194, 0, 1, 0, 0.0436194, 0, 0.999048, 0, 0, 0 )

[node name="HitScanBulletEmitter3" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.999048, 0, 0.0436194, 0, 1, 0, -0.0436194, 0, 0.999048, 0, 0, 0 )

[node name="HitScanBulletEmitter4" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.996195, 0, -0.0871557, 0, 1, 0, 0.0871557, 0, 0.996195, 0, 0, 0 )

[node name="HitScanBulletEmitter5" parent="Camera/WeaponManager/Weapons/Shotgun/BulletEmitters" instance=ExtResource( 9 )]
transform = Transform( 0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, 0, 0, 0 )

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketLauncher" type="Spatial" parent="Camera/WeaponManager/Weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12835, 0.109043, 0.148012 )
visible = false
script = ExtResource( 10 )

[node name="Graphics" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher"]

[node name="rocketlauncher" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics" instance=ExtResource( 8 )]
transform = Transform( 0.109183, 0, 0, 0, 0.109183, 0, 0, 0, 0.109183, 0, 0, 0 )

[node name="MuzzleFlash" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0613885, -0.195539 )
script = ExtResource( 11 )

[node name="OmniLight" type="OmniLight" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash"]

[node name="muzzleflash2" parent="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash" instance=ExtResource( 16 )]
transform = Transform( -0.121088, 0, -3.94556e-08, 0, 0.121088, 0, 3.94556e-08, 0, -0.121088, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
autoplay = "idle"
anims/attack = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="BulletEmitters" type="Spatial" parent="Camera/WeaponManager/Weapons/RocketLauncher"]

[node name="RocketSpawner" parent="Camera/WeaponManager/Weapons/RocketLauncher/BulletEmitters" instance=ExtResource( 15 )]

[node name="Crosshair" type="TextureRect" parent="Camera/WeaponManager/Weapons/RocketLauncher"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/WeaponManager"]
autoplay = "idle"
anims/idle = SubResource( 10 )
anims/moving = SubResource( 11 )

[node name="AlertAreaHearing" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaHearing"]
shape = SubResource( 12 )

[node name="AlertAreaLos" type="Area" parent="Camera/WeaponManager"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Camera/WeaponManager/AlertAreaLos"]
shape = SubResource( 13 )

[node name="FirePoint" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.111322 )

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]

[node name="HealthManager" parent="." instance=ExtResource( 3 )]

[node name="PickupManager" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 21 )

[node name="CollisionShape" type="CollisionShape" parent="PickupManager"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartMessage" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -18.0
margin_right = 138.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 22 )
text = "Press 'R' to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RestartMessage"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -27.0
margin_right = 143.0
margin_bottom = 27.0
texture = ExtResource( 23 )
stretch_mode = 2

[node name="StatsDisplay" type="Label" parent="CanvasLayer"]
margin_left = 23.3508
margin_top = 19.7584
margin_right = 165.351
margin_bottom = 94.7584
custom_fonts/font = ExtResource( 22 )
text = "Health: 0
Ammo: 0"
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthEffects" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HealthEffects"]
autoplay = "start"
anims/heal = SubResource( 15 )
anims/hurt = SubResource( 16 )
anims/start = SubResource( 17 )

[node name="PickupInfo" type="Label" parent="CanvasLayer"]
margin_left = 26.9489
margin_top = 123.203
margin_right = 381.949
margin_bottom = 354.203
custom_fonts/font = SubResource( 18 )
text = "Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun
Picked up Machine Gun
"
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveInfoTimer" type="Timer" parent="CanvasLayer/PickupInfo"]
wait_time = 2.0
[connection signal="ammo_changed" from="Camera/WeaponManager" to="CanvasLayer/StatsDisplay" method="update_ammo"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/MachineGun" to="Camera/WeaponManager/Weapons/MachineGun/Graphics/MuzzleFlash" method="flash"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/Shotgun" to="Camera/WeaponManager/Weapons/Shotgun/Graphics/MuzzleFlash" method="flash"]
[connection signal="fired" from="Camera/WeaponManager/Weapons/RocketLauncher" to="Camera/WeaponManager/Weapons/RocketLauncher/Graphics/MuzzleFlash" method="flash"]
[connection signal="dead" from="HealthManager" to="CanvasLayer/RestartMessage" method="show"]
[connection signal="healed" from="HealthManager" to="CanvasLayer/HealthEffects/AnimationPlayer" method="play" binds= [ "heal" ]]
[connection signal="health_changed" from="HealthManager" to="CanvasLayer/StatsDisplay" method="update_health"]
[connection signal="hurt" from="HealthManager" to="CanvasLayer/HealthEffects/AnimationPlayer" method="play" binds= [ "hurt" ]]
[connection signal="got_pickup" from="PickupManager" to="CanvasLayer/PickupInfo" method="add_pickups_info"]
[connection signal="timeout" from="CanvasLayer/PickupInfo/RemoveInfoTimer" to="CanvasLayer/PickupInfo" method="remove_pickups_info"]
